# pingpong-esp32

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
backend/: config.json  config_utils.py  controller.py  notifier.py  server.py  slack_test.py
backend/assets/: mic_test.html
device/: boot.py  config.json  main.py  secrets.example.json  secrets.template.json
device/drivers/: button.py  led.py
device/lib/: wav.py
device/modules/: detector.py  events.py  indicator.py  notifier.py
device/net/: ntp.py  wifi_manager.py
docs/: wiring.md
firmware/: README.md
notebooks/: analyze_demo_recording.ipynb
tools/: detect_port.py
